remove footer link,

--- a/xiangyee-backend/public/index.html
+++ b/xiangyee-backend/public/index.html
@@ -79,6 +79,7 @@
         <a href="#about" class="hover:text-brand-red">About</a>
         <a href="#menu" class="hover:text-brand-red">Menu</a>
         <a href="#gallery" class="hover:text-brand-red">Gallery</a>
+        <a href="#instagram" class="hover:text-brand-red">Instagram</a>
         <a href="#reserve" class="hover:text-brand-red">Reserve</a>
         <a href="#contact" class="hover:text-brand-red">Contact</a>
       </nav>
@@ -494,14 +495,6 @@
   <footer class="border-t border-neutral-200 bg-white">
     <div class="max-w-6xl mx-auto px-4 py-10 flex flex-col md:flex-row items-center justify-between gap-4 text-sm text-neutral-600">
       <div>© <span id="year"></span> Xiangyee Hunan Cuisine. All rights reserved.</div>
-      <div class="flex items-center gap-4">
-        <a href="#about" class="hover:text-brand-red">About</a>
-        <a href="#menu" class="hover:text-brand-red">Menu</a>
-        <a id="my-order-link-mobile" href="#my-order" class="hidden py-2 hover:text-brand-red">My Order</a>
-        <a id="my-order-footer" href="#my-order" class="hidden hover:text-brand-red">My Order</a>
-        <a href="#reserve" class="hover:text-brand-red">Reserve</a>
-        <a href="#contact" class="hover:text-brand-red">Contact</a>
-      </div>
     </div>
   </footer>
 
